--- a/elektric.html
+++ b/elektric.html
@@ -115,7 +115,9 @@
 .hamburger-menu:hover .nav-links {
   display: flex;
 }
-
+#menu-container:hover #dropdown {
+  display: block;
+}
   </style>
 </head>
 <body>
@@ -125,14 +127,15 @@
     <div class="hamburger-menu">
       <span>&#9776;</span>
       <div class="nav-links">
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/home.html">Home</a>
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/elektric.html">E-leKtric</a>
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/trEz.html">TrEz</a>
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/RACs.html">RAC Processor</a>
+       <a href="index.html">Home</a> |
+       <a href="elektric.html">E-lektric</a> |
+       <a href="trez.html">trEz</a> |
+       <a href="racs.html">RAC Prosessor Nodes</a>
+      
       </div>
     </div>
     </header>
-
+d
   <body>
   <div class="blurb">
     <h1>E-leKtric</h1>
@@ -165,7 +168,8 @@
 
   </body>
 
- 
+  
+  
   <footer>
     &copy; 2025 Anthony Grillone. All rights reserved.
     <br><br>
