--- a/trez.html
+++ b/trez.html
@@ -113,7 +113,9 @@
 .hamburger-menu:hover .nav-links {
   display: flex;
 }
-
+#menu-container:hover #dropdown {
+  display: block;
+}
   </style>
 </head>
 <body>
@@ -123,10 +125,10 @@
     <div class="hamburger-menu">
       <span>&#9776;</span>
       <div class="nav-links">
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/home.html">Home</a>
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/elektric.html">E-leKtric</a>
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/trEz.html">TrEz</a>
-        <a href="/home/anthonyg/PORTFOLIO/PORTFOLIOhtml/RACs.html">RAC Processor</a>
+        <a href="index.html">Home</a>
+        <a href="elektric.html">E-leKtric</a>
+        <a href="trez.html">TrEz</a>
+        <a href="racs.html">RAC Processor</a>
       </div>
     </div>
     
@@ -151,6 +153,12 @@
     <div class="two"></div>
     </div>
 </body>
+
+  
+    <a href="index.html">Home</a> |
+    <a href="trez.html">TrEz</a> |
+    <a href="racs.html">RACs</a> |
+    <a href="elektric.html">EleKtriC</a>
 
   <footer>
     &copy; 2025 Anthony Grillone. All rights reserved.
